提交分支内容

--- a/home2.html
+++ b/home2.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>版本4</title>
+    <title>版本3</title>
 </head>
 <body>
-
+<div> 这是分支的内容</div>
 </body>
 </html>
